// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 0 expenses correctly 1`] = `
<h2>
  Viewing 
  0
   
  expense
  , totaling 
  $0.00
</h2>
`;

exports[`should render ExpenseSummary with 0 expenses correctly 2`] = `
<h2>
  Viewing 
  69
   
  expense
  , totaling 
  $0.01
</h2>
`;
